--- a/spot-spring-web-support/pom.xml
+++ b/spot-spring-web-support/pom.xml
@@ -42,7 +42,7 @@
 			</releases>
 			<snapshots>
 				<enabled>true</enabled>
-				<updatePolicy>10</updatePolicy>
+				<updatePolicy>interval:300</updatePolicy>
 			</snapshots>
 		</repository>
 	</repositories>
