--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -103,20 +103,21 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
-				<version>1.8</version>
+				<version>1.9</version>
 				<configuration>
 					<showWeaveInfo>true</showWeaveInfo>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<Xlint>ignore</Xlint>
+					<XnoInline>true</XnoInline>
 					<complianceLevel>${java.version}</complianceLevel>
 					<encoding>UTF-8</encoding>
 					<verbose>false</verbose>
@@ -170,21 +171,21 @@
 		</dependency>
 
 		<!-- aspectj -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.aspectj</groupId> -->
-		<!-- <artifactId>aspectjrt</artifactId> -->
-		<!-- <version>${aspectj.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.aspectj</groupId> -->
-		<!-- <artifactId>aspectjtools</artifactId> -->
-		<!-- <version>${aspectj.version}</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
+			<artifactId>aspectjrt</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjtools</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.aspectj</groupId> -->
+		<!-- <artifactId>aspectjweaver</artifactId> -->
+		<!-- <version>${aspectj.version}</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
