big refactoring for the relation proxy list implementation

--- a/spot-core/resource/log4j2.properties
+++ b/spot-core/resource/log4j2.properties
@@ -20,3 +20,6 @@ log4j.logger.org.reflections=WARN, file
 log4j.logger.org.eclipse.jetty=WARN, file
 log4j.logger.spark.embeddedserver=WARN, file
 
+log4j.logger.at.spot.core.support.util.ClassUtil=WARN, file
+log4j.logger.org.springframework.context.annotation=WARN, file
+log4j.logger.org.springframework.beans.factoryn=WARN, file
