--- a/spot-core/resource/core.properties
+++ b/spot-core/resource/core.properties
@@ -2,7 +2,6 @@ spot.core.version=0.0.5
 
 i18n.default.locale=en_EN
 
-service.type.rest.port=19000
-service.model.rest.port=19001
+service.typesystem.rest.port=19000
 
 service.persistence.mapdb.filepath=/var/tmp/spot-core.db
