implemented authentication for type and model rest service + session handling

--- a/spot-core/resource/core.properties
+++ b/spot-core/resource/core.properties
@@ -1,7 +1,10 @@
-spot.core.version=0.0.5
++spot.core.version=0.0.5
 
 i18n.default.locale=en_EN
 
 service.typesystem.rest.port=19000
-
 service.persistence.mapdb.filepath=/var/tmp/spot-core.db
+
+init.default.admin.username=admin
+# the password is MD5 hashed, you can use any hashing method here, but make sure that you configure/implement the correct PasswordEncryptionStrategy 
+init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
