Implemented a javascript-style dynamic object, that can hold values but also callable objects

--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -155,5 +155,12 @@
 			<version>2.2.4</version>
 		</dependency>
 
+		<!-- junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
 	</dependencies>
 </project>
