implemented commerce base item types

--- a/spot-commerce-base/.project
+++ b/spot-commerce-base/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spot-core-maven-plugins</name>
+	<name>spot-commerce-base</name>
 	<comment></comment>
 	<projects>
 	</projects>
