--- a/spot-core-maven-plugins/pom.xml
+++ b/spot-core-maven-plugins/pom.xml
@@ -113,6 +113,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.squareup</groupId>
+			<artifactId>javapoet</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.0</version>
