refactoring for PLAN

--- a/spot-cms-base/pom.xml
+++ b/spot-cms-base/pom.xml
@@ -60,7 +60,7 @@
 							<goal>itemTypeGeneration</goal>
 						</goals>
 						<configuration>
-							<title>spot-core</title>
+							<title>spot-cms-base</title>
 						</configuration>
 					</execution>
 				</executions>
