removed maven warnings

--- a/spot-mail/pom.xml
+++ b/spot-mail/pom.xml
@@ -79,7 +79,7 @@
 						</goals>
 						<configuration>
 							<minimizeJar>true</minimizeJar>
-							<outputFile>${project.build.directory}/${artifactId}-${version}-fat.jar</outputFile>
+							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
 						</configuration>
 					</execution>
 				</executions>
