--- a/spot-commerce-spring-base/pom.xml
+++ b/spot-commerce-spring-base/pom.xml
@@ -86,6 +86,11 @@
 		</dependency>
 		<dependency>
 			<groupId>at.spot</groupId>
+			<artifactId>spot-spring-web-support</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>at.spot</groupId>
 			<artifactId>spot-commerce-base</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
@@ -93,16 +98,6 @@
 			<groupId>at.spot</groupId>
 			<artifactId>spot-cms-base</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>4.3.3.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>4.3.3.RELEASE</version>
 		</dependency>
 	</dependencies>
 </project>
