--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -10,12 +10,12 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring.version>4.3.3.RELEASE</spring.version>
+		<spring.version>4.3.9.RELEASE</spring.version>
 		<jar.mainclass>org.springframework.shell.Bootstrap</jar.mainclass>
 		<spring.shell.version>1.2.0.RELEASE</spring.shell.version>
-		<aspectj.version>1.8.9</aspectj.version>
-		<log4j.version>2.7</log4j.version>
-		<junit.version>4.10</junit.version>
+		<aspectj.version>1.8.10</aspectj.version>
+		<log4j.version>2.8.2</log4j.version>
+		<junit.version>4.12</junit.version>
 
 		<!-- nexus repositry -->
 		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
@@ -169,11 +169,11 @@
 						<artifactId>aspectjrt</artifactId>
 						<version>${aspectj.version}</version>
 					</dependency>
-<!-- 					<dependency> -->
-<!-- 						<groupId>org.aspectj</groupId> -->
-<!-- 						<artifactId>aspectjtools</artifactId> -->
-<!-- 						<version>${aspectj.version}</version> -->
-<!-- 					</dependency> -->
+					<!-- <dependency> -->
+					<!-- <groupId>org.aspectj</groupId> -->
+					<!-- <artifactId>aspectjtools</artifactId> -->
+					<!-- <version>${aspectj.version}</version> -->
+					<!-- </dependency> -->
 				</dependencies>
 			</plugin>
 		</plugins>
@@ -198,16 +198,16 @@
 		</dependency>
 
 		<!-- aspectj -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.aspectj</groupId> -->
-<!-- 			<artifactId>aspectjrt</artifactId> -->
-<!-- 			<version>${aspectj.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.aspectj</groupId> -->
-<!-- 			<artifactId>aspectjtools</artifactId> -->
-<!-- 			<version>${aspectj.version}</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.aspectj</groupId> -->
+		<!-- <artifactId>aspectjrt</artifactId> -->
+		<!-- <version>${aspectj.version}</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.aspectj</groupId> -->
+		<!-- <artifactId>aspectjtools</artifactId> -->
+		<!-- <version>${aspectj.version}</version> -->
+		<!-- </dependency> -->
 		<!-- <dependency> -->
 		<!-- <groupId>org.aspectj</groupId> -->
 		<!-- <artifactId>aspectjweaver</artifactId> -->
@@ -302,6 +302,34 @@
 		</dependency>
 
 		<!-- spring -->
+		<dependency>
+			<groupId>org.springmodules</groupId>
+			<artifactId>spring-modules-validation</artifactId>
+			<version>0.8</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- validation -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.3.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 
 		<!-- spring shell -->
 		<dependency>
