--- a/spot-spring-web-support/pom.xml
+++ b/spot-spring-web-support/pom.xml
@@ -10,12 +10,13 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring.version>4.1.3.RELEASE</spring.version>
+		<spring.version>4.3.9.RELEASE</spring.version>
+		<spring.security.version>4.2.3.RELEASE</spring.security.version>
 		<jar.mainclass>org.springframework.shell.Bootstrap</jar.mainclass>
 		<spring.shell.version>1.2.0.RELEASE</spring.shell.version>
-		<aspectj.version>1.8.9</aspectj.version>
-		<log4j.version>2.7</log4j.version>
-		<junit.version>4.10</junit.version>
+		<aspectj.version>1.8.10</aspectj.version>
+		<log4j.version>2.8.2</log4j.version>
+		<junit.version>4.12</junit.version>
 
 		<jetty.version>9.4.4.v20170414</jetty.version>
 		<tomcat.version>8.5.2</tomcat.version>
@@ -37,6 +38,10 @@
 	</distributionManagement>
 
 	<repositories>
+		<repository>
+			<id>spring-releases</id>
+			<url>https://repo.spring.io/libs-release</url>
+		</repository>
 		<repository>
 			<id>mvnrepository.com</id>
 			<name>MVN repository</name>
@@ -85,17 +90,17 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring.version}</version>
+			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>${spring.version}</version>
+			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			<version>${spring.version}</version>
+			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.session</groupId>
@@ -105,7 +110,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.3.3.RELEASE</version>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- jetty -->
