--- a/spot/pom.xml
+++ b/spot/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.spot</groupId>
-	<artifactId>spot-framework</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>spOt framework</name>
+    <artifactId>spot-framework</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>spOt framework</name>
     <packaging>pom</packaging>
 
     <modules>
@@ -20,17 +20,99 @@
         <module>spot-commerce-spring-base</module>
         <module>spot-commerce-base</module>
         <module>spot-cms-base</module>
+        <module>spot-mail</module>
     </modules>
+    
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <log4j.version>2.8.2</log4j.version>
+        <junit.version>4.12</junit.version>
+
+        <!-- nexus repositry -->
+        <nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
+        <nexus.release.host>http://5.249.148.46:8081/repository/spot-release/</nexus.release.host>
+    </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>spot-nexus-release</id>
+            <url>${nexus.release.host}</url>
+        </repository>
+        <snapshotRepository>
+            <id>spot-nexus-snapshot</id>
+            <url>${nexus.snapshot.host}</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-releases</id>
+            <url>https://repo.spring.io/libs-release</url>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <repositories>
+        <!-- external repos -->
+        <repository>
+            <id>spring-releases</id>
+            <url>https://repo.spring.io/libs-release</url>
+        </repository>
+        <repository>
+            <id>alfresco-public</id>
+            <name>Alfresco Public</name>
+            <url>https://artifacts.alfresco.com/nexus/content/repositories/public/</url>
+        </repository>
+        <repository>
+            <id>mvnrepository.com</id>
+            <name>MVN repository</name>
+            <url>http://mvnrepository.com/artifact</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>http://repo.maven.apache.org/maven2</url>
+        </repository>
+
+        <!-- spot repos -->
+        <repository>
+            <id>spot-nexus-release</id>
+            <url>${nexus.release.host}</url>
+        </repository>
+        <repository>
+            <id>spot-nexus-snapshot</id>
+            <url>${nexus.snapshot.host}</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>interval:300</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
                 </plugin>
             </plugins>
@@ -38,11 +120,36 @@
     </build>
 
     <dependencies>
+        <!-- apache tools -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
+        
+        <!-- junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        
+        <!-- logging -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 </project>
