--- a/spot/spot-commerce-spring-base/pom.xml
+++ b/spot/spot-commerce-spring-base/pom.xml
@@ -1,104 +1,64 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>at.spot</groupId>
-	<artifactId>spot-commerce-spring-base</artifactId>
-	<version>1.0-SNAPSHOT</version>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>at.spot</groupId>
+    <artifactId>spot-commerce-spring-base</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-	<properties>
-		<java.version>1.8</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring.version>4.3.3.RELEASE</spring.version>
-		<jar.mainclass>org.springframework.shell.Bootstrap</jar.mainclass>
-		<spring.shell.version>1.2.0.RELEASE</spring.shell.version>
-		<aspectj.version>1.8.9</aspectj.version>
-		<log4j.version>1.2.17</log4j.version>
-		<junit.version>4.10</junit.version>
+    <parent>
+        <groupId>at.spot</groupId>
+        <artifactId>spot-framework</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-		<!-- nexus repositry -->
-		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
-		<nexus.release.host>http://5.249.148.46:8081/repository/spot-release/</nexus.release.host>
-	</properties>
+    <properties>
+        <spring.version>4.3.3.RELEASE</spring.version>
+    </properties>
 
-	<distributionManagement>
-		<repository>
-			<id>spot-nexus-release</id>
-			<url>${nexus.release.host}</url>
-		</repository>
-		<snapshotRepository>
-			<id>spot-nexus-snapshot</id>
-			<url>${nexus.snapshot.host}</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<repositories>
-		<repository>
-			<id>spot-nexus-snapshot</id>
-			<url>${nexus.snapshot.host}</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>interval:300</updatePolicy>
-			</snapshots>
-		</repository>
-	</repositories>
-
-	<build>
-		<plugins>
-			<!-- item type generation -->
-			<plugin>
-				<groupId>at.spot</groupId>
-				<artifactId>spot-core-maven-plugins</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>itemTypeGeneration</goal>
-						</goals>
-						<configuration>
-							<title>spot-commerce-spring-base</title>
+    <build>
+        <plugins>
+            <!-- item type generation -->
+            <plugin>
+                <groupId>at.spot</groupId>
+                <artifactId>spot-core-maven-plugins</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>itemTypeGeneration</goal>
+                        </goals>
+                        <configuration>
+                            <title>spot-commerce-spring-base</title>
                             <sourceDirectory>target/generated-sources/spot-commerce-spring-base</sourceDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
+        </plugins>
+    </build>
 
-		</plugins>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>at.spot</groupId>
-			<artifactId>spot-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>at.spot</groupId>
-			<artifactId>spot-spring-web-support</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>at.spot</groupId>
-			<artifactId>spot-commerce-base</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>at.spot</groupId>
-			<artifactId>spot-cms-base</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>at.spot</groupId>
+            <artifactId>spot-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>at.spot</groupId>
+            <artifactId>spot-spring-web-support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>at.spot</groupId>
+            <artifactId>spot-commerce-base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>at.spot</groupId>
+            <artifactId>spot-cms-base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
