--- a/spot-commerce-base/pom.xml
+++ b/spot-commerce-base/pom.xml
@@ -1,49 +1,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>at.spot</groupId>
-    <artifactId>spot-commerce-base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>spot-commerce-base</artifactId>
 
-    <properties>
-        <spring.version>4.3.3.RELEASE</spring.version>
-    </properties>
+	<parent>
+		<groupId>at.spot</groupId>
+		<artifactId>spot-framework</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
-    <build>
-        <plugins>
-            <!-- item type generation -->
-            <plugin>
-                <groupId>at.spot</groupId>
-                <artifactId>spot-core-maven-plugins</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>itemTypeGeneration</goal>
-                        </goals>
-                        <configuration>
-                            <title>spot-commerce-base</title>
-                            <sourceDirectory>target/generated-sources/spot-commerce-base</sourceDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-		
-        </plugins>
-    </build>
+	<properties>
+		<spring.version>4.3.3.RELEASE</spring.version>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>at.spot</groupId>
-            <artifactId>spot-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-    </dependencies>
+	<build>
+		<plugins>
+			<!-- item type generation -->
+			<plugin>
+				<groupId>at.spot</groupId>
+				<artifactId>spot-core-maven-plugins</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>itemTypeGeneration</goal>
+						</goals>
+						<configuration>
+							<title>spot-commerce-base</title>
+							<sourceDirectory>target/generated-sources/spot-commerce-base</sourceDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
 </project>
