--- a/spot-core/.classpath
+++ b/spot-core/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="target/generated-sources/spot-core"/>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="resource">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -17,7 +18,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="gensrc"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
